# python-package-template

./: .coverage  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml
.github/workflows/: ci.yml  code-quality.yaml  code-quality.yml  pytest.yml  release.yml
src/python_package_template/: __init__.py
tests/: test_init.py
