[project]
name = "python-package-template"
version = "0.1.0"
description = "Add your description here"
authors = [
    {name = "Michael Ellis",email = "michaelellis003@gmail.com"}
]
license = {text = "Apache"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[dependency-groups]
code_checks = [
    "pre-commit>=4.0.1",
    "pyright>=1.1.392.post0",
    "ruff>=0.9.2",
]
