[project]
name = "python-package-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Ellis", email = "michaelellis003@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
python-package-template = "python_package_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]
